# rust-dnn

./: .gitignore  Cargo.toml  build.rs
examples/: example.rs  mnist.rs  relu.rs  softmax.rs  utils.rs
src/: activation.rs  context.rs  convolution.rs  error.rs  kernel.cu  lib.rs  misc.rs  relu.rs  scalar.rs  softmax.rs  tensor.rs  workspace.rs
src/custom/: functions.rs  kernel.cu  mod.rs
src/dataset/: mnist.rs  mod.rs
src/generic_value/: impls.rs  mod.rs  traits.rs  values.rs
src/layer/: convolution.rs  linear.rs  mod.rs  relu.rs  softmax.rs
